--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
-# node modules
-node_modules/
-
-# build output
-#dist/
-.vite/
-
-# system files
-.DS_Store
-Thumbs.db
-
-# environment files
-.env
-.env.local
-
-# logs
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# IDEs
-.vscode/
-.idea/
+node_modules
+dist
+dist-ssr
+*.local
 
-# TypeScript
-*.tsbuildinfo
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
